// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test \`ErrorTool\` test \`parseErrorArgument\` 1`] = `
Object {
  "innerError": undefined,
  "message": undefined,
}
`;

exports[`Test \`ErrorTool\` test \`parseErrorArgument\` 2`] = `
Object {
  "message": "error object",
}
`;

exports[`Test \`ErrorTool\` test \`parseErrorArgument\` 3`] = `
Object {
  "a": "a",
  "b": -1,
  "message": "error object",
}
`;

exports[`Test \`ErrorTool\` test \`parseErrorArgument\` 4`] = `
Object {
  "a": "a",
  "c": true,
  "d": "d",
  "e": "e",
}
`;

exports[`Test \`ErrorTool\` test \`parseErrorArgument\` 5`] = `
Object {
  "a": "a",
  "b": -1,
  "innerError": [Error],
  "message": "error object",
}
`;

exports[`Test \`ErrorTool\` test \`parseErrorArgument\` 6`] = `
Object {
  "a": "a",
  "b": -1,
  "c": true,
  "innerError": undefined,
  "message": "error object",
}
`;

exports[`Test \`ErrorTool\` test \`parseErrorArgument\` 7`] = `
Object {
  "a": "a",
  "b": -1,
  "c": false,
  "d": "d",
  "e": "e",
  "innerError": [Error],
  "message": "error object",
}
`;
